# Carrier

./: .coderabbit.yaml  AGENTS.md  README.md  biome.jsonc  package.json  tsconfig.json  tsconfig.test.json
.cargo/: audit.toml
.github/: dependabot.yml
.github/scripts/: generate-release-notes.mjs
.github/workflows/: ci.yml  release.yml
docs/: index.html
inject/: build.ts
inject/src/: types.d.ts
inject/src/messenger/: bridge.ts  index.ts
inject/src/messenger/features/: auto-refresh.ts  composer-keys.ts  context-menu.ts  conversation-actions.ts  cookie-consent.ts  download-anchors.ts  emoji-images.ts  facebook-modules.ts  facebook-workers.ts  force-theme.ts  fullscreen.ts  hide-names.ts  link-handling.ts  login-tidy.ts  media-autoplay.ts  media-permissions.ts  media-viewer.ts  notifications.ts  quick-reply.ts  realtime-health.ts  recent-threads.ts  selector-health.ts  settings-button.ts  shortcuts.ts  spellcheck.ts  sync-health.ts  system-emoji.ts  telemetry.ts  thread-nav.ts  unread-badge.ts  viewer-controls.ts  zoom.ts
inject/src/messenger/lib/: auto-refresh.test.ts  auto-refresh.ts  color.test.ts  color.ts  composer-keys.test.ts  composer-keys.ts  conversation-row.test.ts  conversation-row.ts  dnd.test.ts  dnd.ts  download-completion.test.ts  download-completion.ts  downloads.test.ts  downloads.ts  emoji-images.test.ts  emoji-images.ts  emoji.test.ts  emoji.ts  facebook-modules.test.ts  facebook-modules.ts  facebook-workers.test.ts  facebook-workers.ts  injected-assets.test.ts  links.test.ts  links.ts  login-page.test.ts  login-page.ts  mcp-bridge-runtime.test.ts  media-autoplay.test.ts  media-autoplay.ts  media-tracks.test.ts  media-tracks.ts  misc.test.ts  notification-fallback.test.ts  notification-fallback.ts  privacy.test.ts  privacy.ts  quick-reply.test.ts  quick-reply.ts  realtime-health.test.ts  (+15 more)
inject/src/panel/: index.ts  shortcut-data.test.ts  shortcut-data.ts  toast.test.ts  toast.ts
inject/src/settings/: update-consent.test.ts  update-consent.ts
packaging/aur/: PKGBUILD.tpl
packaging/flatpak/: README.md  cargo-sources.json  io.github.kristofferr.carrier.desktop  io.github.kristofferr.carrier.yml
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/dev-capabilities/: mcp.json
src-tauri/inject/: mcp-bridge.js  messenger.css  messenger.js  panel.js
src-tauri/linux/: carrier.desktop.hbs  io.github.kristofferr.carrier.metainfo.xml
src-tauri/src/: cli.rs  commands.rs  custom_css.rs  diag.rs  download.rs  hotkey.rs  hotkey_portal.rs  install_environment.rs  lib.rs  linux.rs  menu.rs  notifications.rs  preflight.rs  settings.rs  tray.rs  tray_badge.rs  url_rules.rs  webview_watchdog.rs  window.rs
src-tauri/src/macos/: dock.rs  memory.rs  mod.rs  notifications.rs  theme.rs
tests/: generate-release-notes.test.mjs
